@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add missing newlines in copyright header in some plugin source/header files.
+ plugins/cfpython/include/cfpython.h
+ plugins/cfpython/include/cfpython_object_private.h
+ plugins/cfpython/include/cfpython_map.h
+ plugins/cfpython/cfpython_map.c
+ plugins/cfnewspaper/cfnewspaper.c
+Arvid Norlander 2008-06-13
+
 Reformat all header files in include/ to fit with current coding style standard,
 a combination of using the astyle tool and manual review afterwards.
  include/define.h
